# RustBucket

./: Cargo.toml  README.md  Rocket.toml
db/: db.sqlite  db.sqlite-shm  db.sqlite-wal
migrations/2022-06-13-144133_create_compstats/: down.sql  up.sql
src/: linux_logs.rs  main.rs  stats.rs
src/linux_logs/: memory.rs  readings.rs
static/: index.html.tera
