[package]
name = "attempt_1000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"   
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
chrono = "0.4.0"    # to get time on host
regex = "1.5.6"     # to search through linux logs

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
features = ["tera"]
